fix: social links mobile alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ ul {
     margin-top: 10px;
     padding: 5px;
     border: 1px solid #fff;
-    background-color: rgb(241, 39, 39);
+    background-color: #dc3545;
 }
 
 .social-icon {
@@ -53,7 +53,7 @@ ul {
 
 .social-links {
     float: right;
-    padding: 2px 0 0 0;
+    padding: 4px 0 0 0;
 }
 
 .collaborate-button {
